abi/aowlspt_fieldrefs.h

typedef struct AowlFieldRef {
    const char* type_name;      /* metadata type that DECLARES the field      */
    const char* field_name;
    int32_t     off;            /* receiver-relative, from fieldOffsets       */
    int32_t     width;          /* bytes; 0 is impossible here (generator     */
                                /* refuses a width it cannot derive)          */
    int32_t     is_reference;   /* 1 => a managed reference slot (M4 applies) */
    uint32_t    inst_size_min;  /* see the note above                         */
    void*       klass[AOWL_FR_MAX_KLASS];
    int32_t     nklass;
} AowlFieldRef;
static AowlFieldRef* aowl_fr_bc_maxbots(void) { return &AOWL_FR_BC_MAXBOTS; }
static AowlFieldRef* aowl_fr_ba_isready(void) { return &AOWL_FR_BA_ISREADY; }
static AowlFieldRef* aowl_fr_graphic_color(void) { return &AOWL_FR_GRAPHIC_COLOR; }
static AowlFieldRef* aowl_fr_tmp_fontasset(void) { return &AOWL_FR_TMP_FONTASSET; }
static AowlFieldRef* aowl_fr_tmp_sharedmat(void) { return &AOWL_FR_TMP_SHAREDMAT; }
static AowlFieldRef* aowl_fr_graphic_mat(void) { return &AOWL_FR_GRAPHIC_MAT; }
static AowlFieldRef* aowl_fr_toggle_group(void) { return &AOWL_FR_TOGGLE_GROUP; }
static AowlFieldRef* aowl_fr_toggle_ison(void) { return &AOWL_FR_TOGGLE_ISON; }
static AowlFieldRef* aowl_fr_tmp_mtext(void) { return &AOWL_FR_TMP_MTEXT; }
static AowlFieldRef* aowl_fr_eb_path(void) { return &AOWL_FR_EB_PATH; }
static AowlFieldRef* aowl_fr_ttd_key(void) { return &AOWL_FR_TTD_KEY; }
static AowlFieldRef* aowl_fr_ttd_title(void) { return &AOWL_FR_TTD_TITLE; }
static AowlFieldRef* aowl_fr_ttd_text(void) { return &AOWL_FR_TTD_TEXT; }
static AowlFieldRef* aowl_fr_ttd_usagestyle(void) { return &AOWL_FR_TTD_USAGESTYLE; }
static AowlFieldRef* aowl_fr_ttd_usageprop(void) { return &AOWL_FR_TTD_USAGEPROP; }
static AowlFieldRef* aowl_fr_ttd_usagetext(void) { return &AOWL_FR_TTD_USAGETEXT; }
static AowlFieldRef* aowl_fr_pe_ao_intensity(void) { return &AOWL_FR_PE_AO_INTENSITY; }
static AowlFieldRef* aowl_fr_pe_ao_radius(void) { return &AOWL_FR_PE_AO_RADIUS; }
static AowlFieldRef* aowl_fr_pe_ao_bluriter(void) { return &AOWL_FR_PE_AO_BLURITER; }