abi/aowlspt_hostwrite.h

static int64_t aowl_fr_refused_narrow_ref(void) { return g_fr_refused_narrow_ref; }
static int64_t aowl_fr_refused_width(void)      { return g_fr_refused_width; }
static int64_t aowl_fr_refused_klass(void)      { return g_fr_refused_klass; }
static int64_t aowl_fr_admitted(void)           { return g_fr_admitted; }
/* Field metadata, for the nim side's refusal messages. A refusal that does not
 * NAME the value it refused is half a refusal (map section 7, rule 11). */
static const char* aowl_fr_type(AowlFieldRef* fr)  { return fr ? fr->type_name : "(null FieldRef)"; }
static const char* aowl_fr_field(AowlFieldRef* fr) { return fr ? fr->field_name : "(null FieldRef)"; }
static int32_t aowl_fr_off(AowlFieldRef* fr)       { return fr ? fr->off : -1; }
static int32_t aowl_fr_width(AowlFieldRef* fr)     { return fr ? fr->width : 0; }
static int32_t aowl_fr_isref(AowlFieldRef* fr)     { return fr ? fr->is_reference : 0; }
static int32_t aowl_fr_nklass(AowlFieldRef* fr)    { return fr ? fr->nklass : 0; }
/* ADMIT the klass of a receiver the caller vouches for.
 *
 * "Vouches for" has one legitimate meaning: the pointer came straight out of a
 * place whose type is a fact -- a detour's `this` on a method declared by that
 * type, or a component the game itself handed back. It NEVER means "it read
 * back plausibly".
 *
 * Returns 1 if the klass is now admitted (or already was), 0 on refusal. */
static int aowl_fr_admit(AowlFieldRef* fr, void* recv) {
    void* k;
    int i;
    if (!fr || !recv)                  { g_hw_refused++; g_hw_refused_mem++; return 0; }
    if (!aowl_hw_readable(recv, 8))    { g_hw_refused++; g_hw_refused_mem++; return 0; }
    k = *(void**)recv;
    if (!k || !aowl_hw_readable(k, 8)) { g_hw_refused++; g_hw_refused_mem++; return 0; }
    for (i = 0; i < fr->nklass && i < AOWL_FR_MAX_KLASS; ++i)
        if (fr->klass[i] == k) return 1;
    if (fr->nklass >= AOWL_FR_MAX_KLASS) { g_hw_refused++; g_fr_refused_klass++; return 0; }
    fr->klass[fr->nklass++] = k;
    g_fr_admitted++;
    return 1;
}
/* The klass the receiver actually presents -- for the refusal message. Returns
 * NULL rather than faulting on an unreadable receiver. */
static void* aowl_fr_klass_of(AowlFieldRef* fr, void* recv) {
    (void)fr;
    if (!recv || !aowl_hw_readable(recv, 8)) return 0;
    return *(void**)recv;
}
/* THE GATE. `n` is the width the CALLER is about to store -- passed in rather
 * than taken from the FieldRef, precisely so R1/R2 have something to compare.
 *
 * `sub` is the byte offset WITHIN the field (natesp writes Color one f32
 * channel at a time: sub = 0/4/8/12). It is bounded by the field width, so a
 * sub-field store can never leave the field.
 *
 * Returns 1 only when every question answers yes. Out-param `why` gets a
 * stable reason code so the nim side can name the refusal:
 *   0 ok, 1 narrow-into-reference, 2 too-wide, 3 klass, 4 recv/mem, 5 bound,
 *   6 the FieldRef itself is unusable (null, or width 0 = generator could not
 *     derive it and refused to guess). */
static int aowl_fr_gate(AowlFieldRef* fr, void* recv, int32_t sub, int32_t n,
                        int32_t* why) {
    void* got;
    int i, seen = 0;
    int32_t off;
    if (why) *why = 6;
    if (!fr || fr->width <= 0 || fr->off < 0) { g_hw_refused++; return 0; }

    /* R1 -- the rule that would have caught the crash. A reference slot is 8
     * bytes and is written 8 bytes or not at all. A 4-byte store of -1 into a
     * zeroed reference slot is exactly `0x00000000FFFFFFFF`. */
    if (fr->is_reference && (n != 8 || sub != 0)) {
        if (why) *why = 1;
        g_hw_refused++; g_fr_refused_narrow_ref++; return 0;
    }
    /* R2 */
    if (n <= 0 || sub < 0 || sub + n > fr->width) {
        if (why) *why = 2;
        g_hw_refused++; g_fr_refused_width++; return 0;
    }
    /* R4 */
    if (!recv || !aowl_hw_readable(recv, 8)) {
        if (why) *why = 4;
        g_hw_refused++; g_hw_refused_mem++; return 0;
    }
    /* R3 -- capped scan, and zero admitted klasses refuses. */
    got = *(void**)recv;
    for (i = 0; i < fr->nklass && i < AOWL_FR_MAX_KLASS; ++i)
        if (fr->klass[i] == got) { seen = 1; break; }
    if (!seen) {
        if (why) *why = 3;
        g_hw_refused++; g_fr_refused_klass++; return 0;
    }
    /* R5 */
    off = fr->off + sub;
    if (fr->inst_size_min == 0 || fr->inst_size_min > AOWL_HW_INSTSIZE_MAX ||
        (uint32_t)(off + n) > fr->inst_size_min) {
        if (why) *why = 5;
        g_hw_refused++; g_hw_refused_size++; return 0;
    }
    if (!aowl_hw_writable((void*)((uint8_t*)recv + off), n)) {
        if (why) *why = 4;
        g_hw_refused++; g_hw_refused_mem++; return 0;
    }
    if (why) *why = 0;
    g_hw_allowed++;
    return 1;
}
/* The receiver-only form, for a field written by CALLING a game setter
 * (`Toggle::Set`, `SetToggleGroup`, `TMP_Text::set_text`). There is no offset
 * to bound -- the callee chooses it -- so the FieldRef contributes exactly one
 * thing, and it is the thing that mattered in both dumps: the receiver's TYPE.
 * Kept separate from `aowl_hw_recv_klass_ok` so the site names the FIELD it is
 * about to have the game write, not just a klass pointer. */
static int aowl_fr_recv_ok(AowlFieldRef* fr, void* recv, int32_t* why) {
    void* got;
    int i;
    if (why) *why = 6;
    if (!fr) { g_hw_refused++; return 0; }
    if (!recv || !aowl_hw_readable(recv, 8)) {
        if (why) *why = 4; g_hw_refused++; g_hw_refused_mem++; return 0;
    }
    got = *(void**)recv;
    for (i = 0; i < fr->nklass && i < AOWL_FR_MAX_KLASS; ++i)
        if (fr->klass[i] == got) { if (why) *why = 0; g_hw_allowed++; return 1; }
    if (why) *why = 3;
    g_hw_refused++; g_fr_refused_klass++; return 0;
}
/* ---------------------------------------------------------------------------
 * THE ADVISORY LOOKUP -- for the inspector `write` verb ONLY.
 *
 * `inspect.nim`'s `write` is the ONE deliberate escape hatch in the tree
 * (WRITE-AUDIT #10): an arbitrary evaluated address, an arbitrary width, an
 * arbitrary value, gated by `liveInspectorWrite` plus an `allow write` line in
 * the batch. It stays raw -- an operator debugging a live client needs to be
 * able to write things the metadata has never heard of.
 *
 * What it should not do is write into a slot the metadata DOES know about
 * without saying so. `write <expr> i32 -1` into a reference slot is a literal
 * match for producer (A) of the 0x00000000FFFFFFFF crash, and the operator has
 * no way to know that from the expression alone.
 *
 * So: given the address and width about to be written, find a FieldRef this
 * address could BE -- i.e. some row whose `recv = p - off` presents a klass
 * that row has already admitted -- and report the verdict `aowl_fr_gate` would
 * have returned. ADVISORY: it neither writes nor refuses.
 *
 * A row with zero admitted klasses cannot match, so this says nothing at all
 * until the corresponding feature has actually run. That is a real limitation
 * and it is the honest one: without a klass there is no way to tell a Toggle
 * at +0x120 from any other object with a byte there, and inventing a match
 * from the offset alone would be a confidently wrong answer.
 *
 * Returns the matching row index (0..AOWL_FR_TABLE_ROWS-1), or -1 for "no row
 * in the table can claim this address" -- which is NOT "this write is safe".
 * ------------------------------------------------------------------------ */
static int32_t aowl_fr_lookup(void* p, int32_t n, int32_t* why) {
    int r, i;
    if (why) *why = -1;
    if (!p || n <= 0) return -1;
    for (r = 0; r < AOWL_FR_TABLE_ROWS; ++r) {
        AowlFieldRef* fr = AOWL_FR_ALL[r];
        uint8_t* recv;
        void* got;
        int32_t sub;
        if (!fr || fr->nklass <= 0) continue;
        /* The address may be the field itself or a sub-field offset inside it
         * (natesp writes Color one channel at a time), so try each sub-offset
         * the field's own width allows. Capped by that width: no unbounded
         * loop over game data. */
        for (sub = 0; sub < fr->width; ++sub) {
            recv = (uint8_t*)p - fr->off - sub;
            if ((void*)recv == p && sub != 0) continue;
            if (!aowl_hw_readable(recv, 8)) continue;
            got = *(void**)recv;
            for (i = 0; i < fr->nklass && i < AOWL_FR_MAX_KLASS; ++i) {
                if (fr->klass[i] != got) continue;
                /* Found it. Report what the gate WOULD say, without touching
                 * the refusal counters -- this is not a refusal, it is a
                 * remark, and inflating the counters would make the run
                 * summary lie. */
                if (why) {
                    if (fr->is_reference && (n != 8 || sub != 0)) *why = 1;
                    else if (sub + n > fr->width)                 *why = 2;
                    else                                          *why = 0;
                }
                return (int32_t)r;
            }
        }
    }
    return -1;
}
static const char* aowl_fr_row_type(int32_t r) {
    if (r < 0 || r >= AOWL_FR_TABLE_ROWS) return "";
    return AOWL_FR_ALL[r]->type_name;
}
static const char* aowl_fr_row_field(int32_t r) {
    if (r < 0 || r >= AOWL_FR_TABLE_ROWS) return "";
    return AOWL_FR_ALL[r]->field_name;
}
static int32_t aowl_fr_row_isref(int32_t r) {
    if (r < 0 || r >= AOWL_FR_TABLE_ROWS) return 0;
    return AOWL_FR_ALL[r]->is_reference;
}
static int32_t aowl_fr_row_width(int32_t r) {
    if (r < 0 || r >= AOWL_FR_TABLE_ROWS) return 0;
    return AOWL_FR_ALL[r]->width;
}